--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 project-page/ANN on Sarcasm Detection in Tweets (Day 8)/input/*
 project-page/CNN on MNIST Image Classification (Day 9)/input/*
+project-page/Gender Classification Models (Day 16)/age_gender.csv
+project-page/Gender Classification Models (Day 16)/voice.csv
