--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ project-page/CNN on MNIST Image Classification (Day 9)/input/*
 project-page/Gender Classification Models (Day 16)/age_gender.csv
 project-page/Gender Classification Models (Day 16)/voice.csv
 project-page/Cat and Dog Image Classification Model (Day 17)/PetImages/*
+project-page/Loss Function Analaysis (Day 18)/Twitter Analysis/Tweets.csv
