Day 18 Supplemental Activity

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ project-page/Gender Classification Models (Day 16)/age_gender.csv
 project-page/Gender Classification Models (Day 16)/voice.csv
 project-page/Cat and Dog Image Classification Model (Day 17)/PetImages/*
 project-page/Loss Function Analaysis (Day 18)/Twitter Analysis/Tweets.csv
+project-page/Loss Function Analaysis (Day 18)/Housing Price Analysis/housepricedata.csv
