changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ project-page/Gender Classification Models (Day 16)/voice.csv
 project-page/Cat and Dog Image Classification Model (Day 17)/PetImages/*
 project-page/Loss Function Analaysis (Day 18)/Twitter Analysis/Tweets.csv
 project-page/Loss Function Analaysis (Day 18)/Housing Price Analysis/housepricedata.csv
+project-page/Sentiment Analysis in Movie Reviews (Day 23)/aclImdb
+project-page/Sentiment Analysis in Movie Reviews (Day 23)/aclImdb_v1.tar.gz
