--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ project-page/Loss Function Analaysis (Day 18)/Twitter Analysis/Tweets.csv
 project-page/Loss Function Analaysis (Day 18)/Housing Price Analysis/housepricedata.csv
 project-page/Sentiment Analysis in Movie Reviews (Day 23)/aclImdb
 project-page/Sentiment Analysis in Movie Reviews (Day 23)/aclImdb_v1.tar.gz
+project-page/Computer Vision Emotion Detection (Day 24)/fer2013/*
+project-page/Computer Vision Emotion Detection (Day 24)/haarcascade_frontalface_default.xml
